{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 32,
  "lineage": "81078d59-0daa-7fd2-3dca-f75ab2ed8201",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/zones/us-west4-b/instanceGroups/lb-backend-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-04-18T11:05:45.557-07:00",
            "enable_cdn": false,
            "fingerprint": "OPCulc4dMj4=",
            "generated_id": 3253065785682388246,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/healthChecks/http-basic-check"
            ],
            "id": "projects/qwiklabs-gcp-01-753ed6095387/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "qwiklabs-gcp-01-753ed6095387",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group",
            "google_compute_instance_template.lb-backend-template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-18T11:04:40.953-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-753ed6095387/global/firewalls/permit-tcp-rule-632",
            "log_config": [],
            "name": "permit-tcp-rule-632",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-753ed6095387",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/firewalls/permit-tcp-rule-632",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-content-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-01-753ed6095387/global/forwardingRules/http-content-rule",
            "ip_address": "34.120.69.39",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80",
            "project": "qwiklabs-gcp-01-753ed6095387",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_target_http_proxy.http-lb-proxy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/zones/us-west4-b/disks/nucleus-jumphost-175"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-753ed6095387/zones/us-west4-b/instances/nucleus-jumphost-175",
            "instance_id": "2403846207464238068",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "9G_GJ23Ucjc=",
            "name": "nucleus-jumphost-175",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.100.74",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/networks/default",
                "network_ip": "10.182.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/regions/us-west4/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-01-753ed6095387"
              }
            ],
            "project": "qwiklabs-gcp-01-753ed6095387",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/zones/us-west4-b/instances/nucleus-jumphost-175",
            "service_account": [
              {
                "email": "440899711831-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west4-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-lb-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-18T11:07:27.935-07:00",
            "id": "projects/qwiklabs-gcp-01-753ed6095387/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "qwiklabs-gcp-01-753ed6095387",
            "proxy_bind": false,
            "proxy_id": 2883971813980988080,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "google_compute_backend_service.web-backend-service",
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group",
            "google_compute_instance_template.lb-backend-template",
            "google_compute_url_map.web-map-http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web-map-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-18T11:07:16.128-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "IWWWzKZ6r7M=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-01-753ed6095387/global/urlMaps/web-map-http",
            "map_id": 5269196234120454843,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "qwiklabs-gcp-01-753ed6095387",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-753ed6095387/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web-backend-service",
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group",
            "google_compute_instance_template.lb-backend-template"
          ]
        }
      ]
    }
  ]
}